Project

General

Profile

Actions

Bug #63166

closed

mon/MDSMonitor: metadata not loaded from PAXOS on update

Added by Patrick Donnelly 7 months ago. Updated about 1 month ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
Correctness/Safety
Target version:
% Done:

100%

Source:
Community (dev)
Tags:
backport_processed
Backport:
reef,quincy,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDSMonitor
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 4 (0 open4 closed)

Related to CephFS - Bug #24403: mon failed to return metadata for mdsResolvedPatrick Donnelly

Actions
Copied to CephFS - Backport #63413: reef: mon/MDSMonitor: metadata not loaded from PAXOS on updateResolvedPatrick DonnellyActions
Copied to CephFS - Backport #63414: pacific: mon/MDSMonitor: metadata not loaded from PAXOS on updateResolvedPatrick DonnellyActions
Copied to CephFS - Backport #63415: quincy: mon/MDSMonitor: metadata not loaded from PAXOS on updateResolvedPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly 7 months ago

  • Related to Bug #24403: mon failed to return metadata for mds added
Actions #2

Updated by Patrick Donnelly 7 months ago

  • Status changed from New to Fix Under Review
  • Assignee set to Min Shi
  • Pull request ID set to 53883
Actions #3

Updated by Patrick Donnelly 6 months ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot 6 months ago

  • Copied to Backport #63413: reef: mon/MDSMonitor: metadata not loaded from PAXOS on update added
Actions #5

Updated by Backport Bot 6 months ago

  • Copied to Backport #63414: pacific: mon/MDSMonitor: metadata not loaded from PAXOS on update added
Actions #6

Updated by Backport Bot 6 months ago

  • Copied to Backport #63415: quincy: mon/MDSMonitor: metadata not loaded from PAXOS on update added
Actions #7

Updated by Backport Bot 6 months ago

  • Tags set to backport_processed
Actions #8

Updated by Konstantin Shalygin about 1 month ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
Actions

Also available in: Atom PDF